fix issue where entered message isn't immediately visible

--- a/src/app/sidebar/aichat.less
+++ b/src/app/sidebar/aichat.less
@@ -44,8 +44,8 @@
         }
 
         .chat-msg {
-            margin-top: calc(var(--termpad) * 2);
-            margin-bottom: calc(var(--termpad) * 2);
+            padding-top: calc(var(--termpad) * 2);
+            padding-bottom: calc(var(--termpad) * 2);
             display: flex;
 
             .chat-msg-header {
